[package]
authors = ["Yohai Berreby (yberreby) <yohaiberreby@gmail.com>"]
name = "rgo"
version = "0.1.0"

[dependencies]
convenience = "0.1.0"
env_logger = "0.3.3"
lazy_static = "0.2.0"
log = "0.3.6"
quick-error = "1.0.0"
time = "0.1.35"

[dependencies.clippy]
optional = true
version = "0.0.63"

[dev-dependencies]
convenience = "0.1.0"

[features]
default = []

[profile]

[profile.dev]
debug = true

[profile.release]
debug = true

[[test]]
harness = false
name = "runner"
