[package]
authors = ["Yohai Berreby (yberreby) <yohaiberreby@gmail.com>"]
description = "A work-in-progress Go compiler toolchain."
license = "MIT/Apache-2.0"
name = "rgo"
repository = "https://github.com/yberreby/rgo"
version = "0.1.0"

[dependencies]
convenience = "0.1.0"
env_logger = "0.3.3"
lazy_static = "0.2.0"
log = "0.3.6"
num = "0.1"
quick-error = "1.0.0"
time = "0.1.35"

[dependencies.clippy]
optional = true
version = "0.0.63"

[dev-dependencies]
colored = "1.2.0"
convenience = "0.1.0"

[features]
default = []

[profile]

[profile.dev]
debug = true

[profile.release]
debug = true

[[test]]
harness = false
name = "runner"

[[bin]]
name = "rgo"
doc = false
path = "src/main.rs"
